@@ -25,7 +25,6 @@ import io.ballerina.runtime.internal.types.BIntersectionType;
 import io.ballerina.runtime.internal.util.RuntimeUtils;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * Utils class for runtime unit tests.
@@ -37,11 +36,11 @@ public final class TestUtils {
     }
 
     public static Path getConfigPath(String configFileName) {
-        return Paths.get(RuntimeUtils.USER_DIR, "src", "test", "resources", "config_files", configFileName);
+        return Path.of(RuntimeUtils.USER_DIR, "src", "test", "resources", "config_files", configFileName);
     }
 
     public static Path getConfigPathForNegativeCases(String configFileName) {
-        return Paths.get(RuntimeUtils.USER_DIR, "src", "test", "resources", "config_files", "negative", configFileName);
+        return Path.of(RuntimeUtils.USER_DIR, "src", "test", "resources", "config_files", "negative", configFileName);
     }
 
      public static VariableKey[] getSimpleVariableKeys(Module module) {
