@@ -32,7 +32,6 @@ import picocli.CommandLine;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * Pull command tests.
@@ -149,11 +148,9 @@ public class PullCommandTest extends BaseCommandTest {
     @Test(description = "Pull a package from custom remote repository")
     public void testPullCustom() throws SettingsTomlException, IOException {
 
-        Path customrRepoPath = Paths.get("src", "test", "resources", "test-resources", "custom-repo",
-                "repositories", "repo-push-pull");
-        Path settingsTomlPath = Paths.get("src", "test", "resources", "test-resources", "custom-repo",
-                "Settings.toml");
-        Path mockBallerinaHome = Paths.get("build").resolve("ballerina-home");
+        Path customrRepoPath = Path.of("src/test/resources/test-resources/custom-repo/repositories/repo-push-pull");
+        Path settingsTomlPath = Path.of("src/test/resources/test-resources/custom-repo/Settings.toml");
+        Path mockBallerinaHome = Path.of("build/ballerina-home");
 
         PullCommand pullCommand = new PullCommand(printStream, false);
         new CommandLine(pullCommand).parseArgs("luheerathan/pact1:0.1.0", "--repository=repo-push-pull");
@@ -171,11 +168,9 @@ public class PullCommandTest extends BaseCommandTest {
     @Test(description = "Pull a package from custom remote repository(not exist in Settings.toml)")
     public void testPullNonExistingCustom() throws SettingsTomlException, IOException {
 
-        Path customrRepoPath = Paths.get("src", "test", "resources", "test-resources", "custom-repo",
-                "repositories", "repo-push-pull");
-        Path settingsTomlPath = Paths.get("src", "test", "resources", "test-resources", "custom-repo",
-                "Settings.toml");
-        Path mockBallerinaHome = Paths.get("build").resolve("ballerina-home");
+        Path customrRepoPath = Path.of("src/test/resources/test-resources/custom-repo/repositories/repo-push-pull");
+        Path settingsTomlPath = Path.of("src/test/resources/test-resources/custom-repo/Settings.toml");
+        Path mockBallerinaHome = Path.of("build/ballerina-home");
 
         PullCommand pullCommand = new PullCommand(printStream, false);
         new CommandLine(pullCommand).parseArgs("luheerathan/pact1:0.1.0", "--repository=repo-push-pul");
