@@ -32,7 +32,6 @@ import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 
 /**
@@ -41,7 +40,7 @@ import java.util.ArrayList;
  * @since 2.0.0
  */
 public class TestExpressionFileScheme {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/project");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/project");
     protected Endpoint serviceEndpoint;
 
     @BeforeClass
