@@ -33,7 +33,6 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 import java.util.regex.Pattern;
 
@@ -63,12 +62,12 @@ public class BindgenMvnResolver {
         Path mvnRepository;
         if (projectRoot == null) {
             if (env.getOutputPath() != null) {
-                mvnRepository = Paths.get(env.getOutputPath(), TARGET_DIR, MVN_REPO);
+                mvnRepository = Path.of(env.getOutputPath(), TARGET_DIR, MVN_REPO);
             } else {
-                mvnRepository = Paths.get(System.getProperty(USER_DIR), TARGET_DIR, MVN_REPO);
+                mvnRepository = Path.of(System.getProperty(USER_DIR), TARGET_DIR, MVN_REPO);
             }
         } else {
-            mvnRepository = Paths.get(projectRoot.toString(), TARGET_DIR, MVN_REPO);
+            mvnRepository = Path.of(projectRoot.toString(), TARGET_DIR, MVN_REPO);
         }
         Dependency dependency = resolveDependency(groupId, artifactId, version, mvnRepository.toString());
         handleDependency(groupId, artifactId, version, mvnRepository.toString(), projectRoot, null, parentJvmTarget);
@@ -106,10 +105,10 @@ public class BindgenMvnResolver {
 
     private void handleDependency(String groupId, String artifactId, String version, String mvnRepository,
                                   Path projectRoot, String parent, JvmTarget parentJvmTarget) throws BindgenException {
-        Path mvnPath = Paths.get(mvnRepository, getPathFromGroupId(groupId), artifactId, version);
+        Path mvnPath = Path.of(mvnRepository, getPathFromGroupId(groupId), artifactId, version);
         this.env.addClasspath(mvnPath.toString());
         if (projectRoot != null) {
-            File tomlFile = new File(Paths.get(projectRoot.toString(), ProjectConstants.BALLERINA_TOML).toString());
+            File tomlFile = new File(Path.of(projectRoot.toString(), ProjectConstants.BALLERINA_TOML).toString());
             if (tomlFile.exists() && !tomlFile.isDirectory()) {
                 populateBallerinaToml(groupId, artifactId, version, tomlFile, projectRoot, parent, parentJvmTarget);
             }
@@ -181,7 +180,7 @@ public class BindgenMvnResolver {
 
     private static String getModuleName(Path projectRoot, String outputPath) {
         if (outputPath == null) {
-            outputPath = Paths.get(System.getProperty(USER_DIR)).toString();
+            outputPath = Path.of(System.getProperty(USER_DIR)).toString();
         }
         String splitRegex = Pattern.quote(System.getProperty(FILE_SEPARATOR));
         String[] splittedPath = outputPath.split(splitRegex);
