@@ -20,7 +20,7 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Test the formatting of service and listener declarations.
@@ -43,6 +43,6 @@ public class ServiceListenerDeclarationsTest extends FormatterTest {
 
     @Override
     public String getTestResourceDir() {
-        return Paths.get("declarations", "service-listener").toString();
+        return Path.of("declarations", "service-listener").toString();
     }
 }
