@@ -27,7 +27,7 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -64,7 +64,7 @@ public final class SQLDBUtils {
         URL fileResource = BCompileUtil.class.getClassLoader().getResource(path);
         try {
             if (fileResource == null) {
-                fileResource = Paths.get(path).toUri().toURL();
+                fileResource = Path.of(path).toUri().toURL();
             }
             return FileUtils.readFileToString(new File(fileResource.toURI()), StandardCharsets.UTF_8);
         } catch (IOException | URISyntaxException e) {
