@@ -28,7 +28,7 @@ import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.HashMap;
 
 import static org.ballerinalang.testerina.test.BaseTestCase.balServer;
@@ -59,7 +59,7 @@ public class TestExecutionWithInitFailuresTest {
     @AfterMethod
     public void copyExec() {
         try {
-            FileUtils.copyBallerinaExec(Paths.get(projectPath), String.valueOf(System.currentTimeMillis()));
+            FileUtils.copyBallerinaExec(Path.of(projectPath), String.valueOf(System.currentTimeMillis()));
         } catch (IOException e) {
             // ignore exception
         }
